# chameleon

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.html  CLAUDE.md  CODEX_ANALYSIS.md  CONTRIBUTING.md  HOW_IT_WORKS.html  HOW_IT_WORKS.md  LICENSE  PLAN.md  README.md  README.yaml  RESEARCH.md  RESEARCH_LATEST.md  TROUBLESHOOTING.md  claude-security-guidance.md  docker-compose.yml  enable-ssl.sh  install.sh  update.sh
backend/: .dockerignore  .env.example  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  Dockerfile.prebuilt  config.production.yaml  config.yaml  deny.toml  deploy.sh  docker-compose.yml  go.mod  go.sum  nginx-ssl.conf  nginx.conf  prometheus.yml
backend-legacy-python/: .pre-commit-config.yaml  pyproject.toml
backend-legacy-python/app/: config.py  dependencies.py  logging_config.py  main.py
backend-legacy-python/app/api/: router.py
backend-legacy-python/app/api/admin/: __init__.py  admins.py  auth.py  monitor.py  nodes.py  protocols.py  settings.py  stats.py  users.py
backend-legacy-python/app/api/mobile/: __init__.py  auth.py  config_endpoint.py  shield_endpoint.py  subscription.py
backend-legacy-python/app/api/subscription/: sub.py
backend-legacy-python/app/auth/: admin_auth.py  cache.py  rbac.py
backend-legacy-python/app/database/: db.py  models.py
backend-legacy-python/app/middleware/: rate_limit.py  request_signing.py
backend-legacy-python/app/monitoring/: node_metrics.py  proxy_monitor.py  traffic_collector.py
backend-legacy-python/app/schemas/: __init__.py  stats.py  users.py
backend-legacy-python/app/utils/: __init__.py  formatters.py
backend-legacy-python/app/vpn/: __init__.py  amneziawg.py  antiblock_config.py  config_version.py  device_limiter.py  domain_parser.py  engine.py  fallback.py  links.py  node_agent.py  node_api.py  nodes.py  padding.py  rate_limiter.py  shield.py  singbox_config.py  sni_rotation.py  stats.py  user_service.py  users.py  webhooks.py  xray_api.py
backend-legacy-python/tests/: conftest.py  test_config.py  test_engine.py  test_protocols.py  test_registry.py  test_singbox.py
backend/cmd/ascinit/: main.go
backend/cmd/chameleon/: main.go
backend/cmd/metrics-agent/: main.go
backend/crates/chameleon-admin/: Cargo.toml
backend/crates/chameleon-admin/src/: lib.rs
backend/crates/chameleon-apple/: Cargo.toml
backend/crates/chameleon-auth/: Cargo.toml
backend/crates/chameleon-cluster/: Cargo.toml
backend/crates/chameleon-config/: Cargo.toml
backend/crates/chameleon-core/: Cargo.toml
backend/crates/chameleon-db/: Cargo.toml
backend/crates/chameleon-monitoring/: Cargo.toml
backend/crates/chameleon-server/: Cargo.toml
backend/crates/chameleon-vpn/: Cargo.toml
backend/grafana/dashboards/: .gitkeep  chameleon-overview.json
backend/internal/api/: auth_blacklist_key_test.go  body_limit_test.go  realip_test.go  server.go
backend/internal/asc/: asc.go
backend/internal/auth/: apple.go  apple_test.go  chat_token_test.go  google.go  google_test.go  jwt.go  jwt_test.go  middleware.go  middleware_test.go  password.go  password_test.go
backend/internal/cluster/: errors.go  errors_test.go  models.go  pubsub.go  relay.go  relay_test.go  routes.go  routes_test.go  sync.go  sync_test.go
backend/internal/config/: config.go  config_test.go  encryption_key_test.go
backend/internal/db/: announcements.go  announcements_test.go  app_events.go  app_events_test.go  audit_log.go  audit_log_test.go  db.go  funnel.go  funnel_test.go  lifecycle.go  magic_tokens.go  models.go  payments.go  payments_test.go  promo.go  promo_test.go  push.go  push_test.go  retention.go  retention_test.go  servers.go  servers_test.go  support.go  support_test.go  traffic_outliers_test.go  trial_granted_at_test.go  users.go  users_active_test.go  users_expiry_filter_test.go  users_test.go
backend/internal/email/: email.go  email_test.go  resend.go
backend/internal/geoip/: geoip.go  geoip_test.go
backend/internal/lifecycle/: lifecycle.go  lifecycle_test.go
backend/internal/metrics/: metrics.go  metrics_test.go
backend/internal/payments/: credit.go  credit_refund_test.go  credit_test.go  has_charge_test.go  testdb_test.go
backend/internal/promo/: promo.go  promo_test.go
backend/internal/push/: push.go  push_test.go
backend/internal/secrets/: encrypt.go  encrypt_test.go
backend/internal/storage/: attachment.go  attachment_test.go  storage.go
backend/internal/useragent/: parse.go  parse_test.go
backend/internal/vpn/: clientconfig.go  clientconfig_fingerprint.go  clientconfig_test.go  engine.go  reality_keys.go  reality_keys_test.go  ru_direct_domains.go  singbox.go  singbox_validate_test.go  stats.go  stats_merge_test.go  stats_v2ray.go  telegram_routing.go  userapi.go  userapi_test.go
backend/landing/: index.html  privacy.html  terms.html
backend/landing/app/: index.html  privacy.html  styles.css  support.html  terms.html
backend/migrations/: 001_initial.sql  002_reality_private_key.sql  002_subscription_token.sql  003_activation_code.sql  004_add_indexes.sql  004_ui_theme.sql  005_cluster.sql  006_unique_transaction.sql  007_app_settings.sql  008_node_metrics_history.sql  009_unique_vpn_username.sql  010_relay_architecture.sql  010_vpn_servers.sql  011_whitelist_bypass.sql  012_id_aliases.sql  013_id_aliases_seed_nl.sql  014_unique_constraints.sql  015_shadowsocks_inbound.sql  016_install_secret.sql  017_app_events.sql  018_trial_granted_at.sql  019_last_vpn_seen.sql  020_support_chat.sql  021_support_attachments.sql  022_device_push_tokens.sql  023_push_broadcasts.sql  024_announcements.sql  025_announcement_targeting.sql  026_promo_codes.sql  027_lifecycle_reminders.sql  init.sql
backend/scripts/: db-backup.sh  health-check.sh  log-monitor.sh  measure-engine-memory.sh  predeploy-check.sh  singbox-log-watcher.py  singbox-run.sh  singbox-watchdog.sh  singbox.env  telegram-alert.sh  watch-ios-ne-memory.sh
backend/scripts/test/: watchdog-filter-test.sh
backend/tests/: README.md
backend/tests/e2e/: singbox_check_test.go
backend/tests/integration/: health_test.go
(+790 files in other folders)
