[workspace]
resolver = "2"
members = [
    "crates/chameleon-config",
    "crates/chameleon-db",
    "crates/chameleon-auth",
    "crates/chameleon-vpn",
    "crates/chameleon-core",
    "crates/chameleon-monitoring",
    "crates/chameleon-admin",
    "crates/chameleon-apple",
    "crates/chameleon-cluster",
    "crates/chameleon-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate"] }

# Redis
fred = { version = "10", features = ["subscriber-client"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.16"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
url = "2"
