[package]
name = "chameleon-apple"
version.workspace = true
edition.workspace = true

[dependencies]
chameleon-core = { path = "../chameleon-core" }
chameleon-config = { path = "../chameleon-config" }
chameleon-db = { path = "../chameleon-db" }
chameleon-auth = { path = "../chameleon-auth" }
chameleon-vpn = { path = "../chameleon-vpn" }

fred = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
anyhow = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
x509-parser = "0.18"
