[package]
name = "chameleon-auth"
version.workspace = true
edition.workspace = true

[dependencies]
chameleon-config = { path = "../chameleon-config" }
chameleon-db = { path = "../chameleon-db" }

axum = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ipnet = "2"
