[package]
name = "chameleon-cluster"
version.workspace = true
edition.workspace = true

[dependencies]
chameleon-core = { path = "../chameleon-core" }
chameleon-db = { path = "../chameleon-db" }
chameleon-config = { path = "../chameleon-config" }

axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
