[package]
name = "chameleon-monitoring"
version.workspace = true
edition.workspace = true

[dependencies]
chameleon-config = { path = "../chameleon-config" }
chameleon-db = { path = "../chameleon-db" }
chameleon-vpn = { path = "../chameleon-vpn" }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
fred = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
