[package]
name = "chameleon-vpn"
version.workspace = true
edition.workspace = true

[dependencies]
chameleon-config = { path = "../chameleon-config" }
chameleon-db = { path = "../chameleon-db" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
fred = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
urlencoding = "2"
tonic = "0.12"
prost-types = "0.13"
xray-core = { version = "0.2", features = ["client"] }
